#3 Add Placeholders For All Inputs and Selects, Fix Notes Spacing

--- a/assets/css/components/BaseComponents/Input.scss
+++ b/assets/css/components/BaseComponents/Input.scss
@@ -27,3 +27,7 @@
         color: $color-fieldName;
     }
 }
+
+::placeholder {
+    color: $color-black;
+}
