--- a/assets/css/components/BaseComponents/Select.scss
+++ b/assets/css/components/BaseComponents/Select.scss
@@ -19,10 +19,6 @@
         &--primary {
             border-bottom: 2px solid $color-primary;
         }
-
-        &:focus:invalid {
-            color: #C7C7C7;
-        }
     }
 
     .Select-icon {
